A few fixes to make things look a bit better on iOS devices.

--- a/assets/stylesheets/layout.styl
+++ b/assets/stylesheets/layout.styl
@@ -181,7 +181,7 @@ table
   width 540px
 
 #content
-  padding-top 80px
+  padding-top 40px
 
 #footer
   margin 0px auto
